--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is used for DatatableView
 
-name: Djagno Datatable View Tests
+name: Django Datatable View Tests
 
 on:
   push:
@@ -12,8 +12,7 @@ jobs:
     name: Canceling Outstanding Jobs
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
+      - uses: styfle/cancel-workflow-action@0.12.1
         with:
           access_token: ${{ github.token }}
 
@@ -21,36 +20,36 @@ jobs:
     name: Outdated packages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          python setup.py install
           python -m pip install --upgrade pip
-          pip install -r requirements.txt --user
-          pip install -r requirements_dev.txt --user
+          pip install .
+          pip install .[test]
 
       - name: outdated
-        run: pip list --outdated --not-required --exclude=django --user | grep . && echo "There are outdated packages" && exit 1 || echo "All packages up to date"
+        run: pip list --outdated --not-required --user | grep . && echo "There are outdated packages" && exit 1 || echo "All packages up to date"
 
   black:
     name: Black
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          python setup.py install
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_dev.txt
+          pip install .
+          pip install .[test]
 
       - name: Black
         run: black --check .
@@ -59,17 +58,17 @@ jobs:
     name: Pre-Commit
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          python setup.py install
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_dev.txt
+          pip install .
+          pip install .[test]
           pre-commit install
 
       - name: Pre-Commit
@@ -79,78 +78,73 @@ jobs:
     name: Bandit Security
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          python setup.py install
-          pip install bandit
+          pip install .
+          pip install .[test]
 
       - name: Bandit
-        run: bandit -r datatableview -x datatableview/tests -s B303,B308,B323,B324,B703 -f json -o report.json
+        run: bandit -c pyproject.toml -r -f json -o report.json .
 
       - name: Show report
         if: ${{ success() || failure() }}
         run: cat report.json
 
-      - name: upload report
+      - name: "Upload Coverage Results"
         if: ${{ success() || failure() }}
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Bandit Security Report
           path: report.json
 
-
   tests:
     name: Python ${{ matrix.python-version }} / ${{ matrix.db }} / Django ${{ matrix.django-version}}
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
+#    continue-on-error: ${{ matrix.django-version == '~=5.0' }}
     strategy:
       max-parallel: 4
       matrix:
-        db: [ sqlite, mysql ]
-        django-version: [ "~=3.2", "~=4.0" ]
-        python-version: [ "3.10" ]
-        experimental: [ false ]
+        db: [ sqlite, mariadb ]
+        django-version: ["~=4.2.0", "~=5.0"]
+        python-version: [ "3.12" ]
 
     services:
-      mysql:
-        image: mysql:5.7
+      mariadb:
+        image: mariadb:latest
         env:
-          MYSQL_ROOT_PASSWORD: password
+          MARIADB_ROOT_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping"
+          --health-cmd="mariadb-admin ping"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
 
     steps:
       - name: Verify MySQL connection from host
-        if: matrix.db == 'mysql'
+        if: matrix.db == 'mariadb'
         run: |
           mysql --host 127.0.0.1 --port 3306 -uroot -ppassword -e "SHOW DATABASES" 2>&1 > /dev/null
+          mysql --host 127.0.0.1 --port 3306 -uroot -ppassword -V
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: |
-            setup.py
-            requirements*.txt
 
       - name: Install dependencies
         run: |
-          python setup.py install
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_dev.txt
+          pip install .
+          pip install .[test]
           pip uninstall -y Django
           pip install Django${{ matrix.django-version }}
 
@@ -158,48 +152,44 @@ jobs:
         env:
           PYTHONWARNINGS: once::DeprecationWarning
           DB_TYPE: ${{ matrix.db }}
-        run: |
-          export PYTHONPATH=`pwd`
-          coverage run demo_app/manage.py test --noinput --settings=demo_app.settings_test datatableview
-
+        run: export PYTHONPATH=`pwd` && coverage run
       - name: "Upload Coverage Results for PY:${{ matrix.python-version }} DB:${{ matrix.db}} DJ:${{ matrix.django-version }}"
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.python-version }}-${{ matrix.db}}-${{ matrix.django-version }}
           path: .coverage
           retention-days: 1
 
       - name: Django Check
-        run: |
-          python demo_app/manage.py check
+        run: python demo_app/manage.py check
 
   coverage:
     name: Upload Coverage to Codecov
     needs: [ tests ]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install -q coverage
+        run: |
+          pip install .
+          pip install .[test]
 
-      - uses: actions/checkout@v2
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           path: .
 
       - name: Combine Report Coverage
         run: |
           coverage combine coverage-*/.coverage
+          coverage report
           coverage xml
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
           directory: .
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -215,12 +205,12 @@ jobs:
       bump_version: ${{ steps.release.outputs.bump_version }}
       bump_sha: ${{ steps.release.outputs.bump_sha }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
       - name: Install dependencies
         run: |
           pip install git+https://${{ secrets.ORGANIZATIONAL_REPO_TOKEN }}@github.com/pivotal-energy-solutions/tensor-infrastructure@master#egg=infrastructure
@@ -230,4 +220,7 @@ jobs:
           PYTHONWARNINGS: once::DeprecationWarning
           GITHUB_TOKEN: ${{ secrets.ORGANIZATIONAL_REPO_TOKEN }}
         run: |
-          bumper.py --directory . --exclude=.idea,.github,demo_app --version_files datatableview/__init__.py --repo=pivotal-energy-solutions/django-datatable-view -v
+          bumper -P
+          echo "bumped=$(jq '.bumped' out.json)" >> $GITHUB_OUTPUT
+          echo "bump_version=$(jq '.bump_version' out.json)" >> $GITHUB_OUTPUT
+          echo "bump_sha=$(jq '.bump_sha' out.json)" >> $GITHUB_OUTPUT
